@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-10-07T16:32:23Z",
+  "timestamp" : "2022-10-09T01:59:11Z",
   "count_outdated" : 344,
   "uniques_outdated" : 209,
-  "count" : 347,
-  "uniques" : 211,
+  "count" : 348,
+  "uniques" : 212,
   "clones" : [
     {
       "timestamp": "2022-10-03T00:00:00Z",
@@ -16,6 +16,13 @@
       "timestamp": "2022-10-07T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
